# flow.yaml

appId: com.apple.mobilesafari
---
- launchApp
- extendedWaitUntil:
    visible: "Abrir en la app"
    timeout: 10000
- tapOn: "Abrir en la app"
- tapOn: "OK"
